force-app/main/default/objects/Batch_Job_Monitor__c/Batch_Job_Monitor__c.object-meta.xml
<CustomObject>
    <description>object use tomtrack  batch class statistic</description>
    <label>Batch Job Monitor</label>
    <nameField>
        <displayFormat>BJM-{YYMMDD}-{000}</displayFormat>
        <label>Batch Job Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BatchJobMonitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>