force-app/main/default/objects/Batch_Job_Monitor__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if active create child monitor records</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>