force-app/main/default/objects/Batch_Job_Monitor__c/fields/Batch_End__c.field-meta.xml
<CustomField>
    <fullName>Batch_End__c</fullName>
    <label>Batch_End</label>
    <type>DateTime</type>
</CustomField>