force-app/main/default/objects/Batch_Job_Monitor__c/fields/Batch_Start__c.field-meta.xml
<CustomField>
    <fullName>Batch_Start__c</fullName>
    <label>Batch_Start</label>
    <type>DateTime</type>
</CustomField>