force-app/main/default/objects/Batch_Job_Monitor__c/fields/BatchClassName__c.field-meta.xml
<CustomField>
    <fullName>BatchClassName__c</fullName>
    <label>BatchClassName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>