force-app/main/default/objects/Batch_Job_Monitor__c/fields/BatchJobID__c.field-meta.xml
<CustomField>
    <fullName>BatchJobID__c</fullName>
    <externalId>true</externalId>
    <label>BatchJobID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>