force-app/main/default/objects/Batch_Job_Monitor__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <label>comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>