force-app/main/default/objects/Batch_Job_Monitor__c/fields/NrofFailures__c.field-meta.xml
<CustomField>
    <fullName>NrofFailures__c</fullName>
    <label>NrofFailures</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>