force-app/main/default/objects/Batch_Job_Monitor__c/fields/nrofSuccess__c.field-meta.xml
<CustomField>
    <fullName>nrofSuccess__c</fullName>
    <label>nrofSuccess</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>