force-app/main/default/objects/Batch_Job_Monitor__c/fields/Parent_BatchMonitor__c.field-meta.xml
<CustomField>
    <fullName>Parent_BatchMonitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent BatchMonitor</label>
    <referenceTo>Batch_Job_Monitor__c</referenceTo>
    <relationshipLabel>BatchJobMonitors</relationshipLabel>
    <relationshipName>BatchJobMonitors</relationshipName>
    <type>Lookup</type>
</CustomField>