force-app/main/default/objects/Batch_Job_Monitor__c/recordTypes/Header.recordType-meta.xml
<RecordType>
    <fullName>Header</fullName>
    <active>true</active>
    <label>Header</label>
</RecordType>