force-app/main/default/objects/Batch_Job_Monitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BatchClassName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Parent_BatchMonitor__c</columns>
    <columns>nrofSuccess__c</columns>
    <columns>NrofFailures__c</columns>
    <columns>comment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>